# Leading_Line

./: .gitignore  README.md  config.yaml  config_jetson.yaml  config_pc.yaml  controller.py  detect_image.py  generate_samples.py  main.py  requirements.txt  tests_dual_end.py  visualizer.py
arrow/: detect_image.py  detect_webcam.py  generate_samples.py
arrow_recongnize/: README.md  arrow_detector.py  detect_image.py  detect_webcam.py  generate_samples.py
debug/: README.md  __init__.py  algo_preview.py  arrow_image.py  arrow_samples.py  arrow_webcam.py  qr_preview.py  qr_samples.py
jetson/: __init__.py  config.yaml  main_jetson.py  overrides.py  pipeline.py  ros_bridge.py
jetson/algo/: __init__.py  path_planner.py
jetson/comm/: command_receiver.py
jetson/recognition/arrow/: __init__.py  detect_image.py  detect_webcam.py
jetson/recognition/qr/: __init__.py  qr_make_test.py  qr_policy.py  qr_state_machine.py
jetson/recognition/qr/tests/: test_qr_e2e.py  test_qr_policy.py  test_qr_state_machine.py
pc/: __init__.py  main.py  main_pc.py
pc/comm/: __init__.py  command_sender.py  video_receiver.py
pc/ui/: __init__.py  main_window.py  video_view.py  widgets.py
protocol/: __init__.py  constants.py  messages.py  mode_resolver.py
qr_system/: README.md  qr_config.yaml  qr_main.py  qr_make_test.py  qr_state_machine.py
qr_system/tests/: test_qr_e2e.py  test_qr_policy.py  test_qr_state_machine.py
ros2_pkgs/: README.md  build.sh  check_topics.sh  mock_serial.py
ros2_pkgs/leading_line/: README.md  package.xml  setup.cfg  setup.py
ros2_pkgs/leading_line/config/: perception_params.yaml
ros2_pkgs/leading_line/launch/: full_stack.launch.py  pc_monitor.launch.py  perception.launch.py  perception_with_camera.launch.py
ros2_pkgs/leading_line/leading_line/: __init__.py  ackermann_bridge.py  overrides.py  pc_monitor_bridge.py  perception_node.py  perception_pipeline.py  pipeline.py  vehicle_pipeline.py
ros2_pkgs/leading_line/leading_line/algo/: controller.py  visualizer.py
ros2_pkgs/leading_line/leading_line/comm/: command_receiver.py  video_sender.py
ros2_pkgs/leading_line/leading_line/recognition/: arrow_detector.py
ros2_pkgs/leading_line/leading_line/recognition/qr/: decoder.py  policy.py  state_machine.py
ros2_pkgs/leading_line/test/: test_ackermann_bridge.py  test_perception_pipeline.py
ros2_pkgs/leading_line_chassis/: CMakeLists.txt  README.md  package.xml
ros2_pkgs/leading_line_chassis/config/: chassis.yaml
ros2_pkgs/leading_line_chassis/launch/: chassis.launch.py  chassis_with_robot_description.launch.py
ros2_pkgs/leading_line_chassis/src/: ackermann_kinematics.cpp  ackermann_kinematics.hpp  chassis_node.cpp  chassis_node.hpp  chassis_orientation.hpp  protocol.cpp  protocol.hpp  serial_driver.cpp  serial_driver.hpp
ros2_pkgs/leading_line_chassis/test/: test_chassis_protocol.cpp
ros2_pkgs/leading_line_chassis/urdf/: mini_akm_robot.urdf  senior_akm_robot.urdf
ros_pkgs/leading_line/: CMakeLists.txt  README.md  package.xml
ros_pkgs/leading_line/config/: params.yaml
ros_pkgs/leading_line/launch/: leading_line.launch  leading_line_pc_monitor.launch  leading_line_teleop.launch  leading_line_with_car.launch
ros_pkgs/leading_line/scripts/: leading_line_node.py  node.py  pipeline_launcher.py  run_jetson_pipeline.py
ros_pkgs/leading_line/scripts/xcar/: mbot_teleop.py  xcar_data.py  xcar_ros.py
tests/: __init__.py  color_shift_test.py  degenerate_test.py  edges_test.py  jitter_test.py  multi_blob_test.py  smoke_test.py  steer_response_test.py  straight_road_test.py
tests/data/arrow/: README.md
tests/tools/: make_synth.py
tests/unit/: __init__.py  test_algorithm.py  test_comm.py  test_qr_e2e.py  test_qr_policy.py  test_qr_state_machine.py
vehicle/: __init__.py  main.py  overrides.py  pipeline.py  ros_bridge.py
vehicle/algo/: __init__.py  color_segmenter.py  controller.py  path_planner.py  visualizer.py
vehicle/comm/: __init__.py  command_receiver.py  video_sender.py
vehicle/recognition/: __init__.py  arrow_detector.py
vehicle/recognition/qr/: __init__.py  decoder.py  policy.py  state_machine.py
