<?xml version="1.0"?>
<package format="2">
  <name>leading_line</name>
  <version>0.2.0</version>
  <description><![CDATA[
引导线自动驾驶算法的 ROS launch 包（ROS 1 catkin）。

自带：
  - leading_line_node.py：图像 → 算法 → /cmd_vel
  - scripts/xcar/{xcar_ros,xcar_data,mbot_teleop}.py：
    从原 mbot 包移植过来的 xcar 串口桥接（/cmd_vel ↔ /dev/ttyXCar）
    和键盘遥控

需要 apt 安装：
  - ros-<distro>-realsense2-camera （realsense 摄像头 ROS 驱动）
  - python3-serial 或 pip install pyserial （xcar 串口）
]]></description>

  <maintainer email="dev@leading-line.local">Leading Line Dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>     <!-- xcar_ros.py 发布 Odometry -->
  <depend>tf</depend>          <!-- xcar_ros.py 用 TransformBroadcaster -->
  <depend>cv_bridge</depend>

  <!-- 同系统安装的 ROS 包（用 $(find ...) 引用）-->
  <run_depend>realsense2_camera</run_depend>   <!-- RealSense 驱动（use_realsense=true 时） -->
  <run_depend>tf2_ros</run_depend>
  <run_depend>std_srvs</run_depend>

  <!-- Python 依赖：pip install pyserial（或 apt python3-serial）-->
  <!-- 不写在 package.xml 里；README 文档化 -->

  <export>
  </export>
</package>